--- a/test/fixtures/appointments.yml
+++ b/test/fixtures/appointments.yml
@@ -2,19 +2,17 @@
 #
 # Table name: appointments
 #
-#  id                  :bigint           not null, primary key
-#  cancellation        :boolean
-#  cancellation_reason :text
-#  client_mobile       :integer
-#  client_name         :string
-#  date_created        :datetime
-#  price_service       :decimal(, )
-#  promo_code          :decimal(, )
-#  service_name        :string
-#  technician_name     :string
-#  created_at          :datetime         not null
-#  updated_at          :datetime         not null
-#  technician_id       :bigint
+#  id               :bigint           not null, primary key
+#  client_firstname :string
+#  client_lastname  :string
+#  client_mobile    :integer
+#  date_created     :datetime
+#  price_service    :decimal(, )
+#  service_name     :string
+#  technician_name  :string
+#  created_at       :datetime         not null
+#  updated_at       :datetime         not null
+#  technician_id    :bigint
 #
 # Indexes
 #
@@ -27,22 +25,18 @@
 
 one:
   date_created: 2021-04-19 17:00:57
-  client_name: MyString
+  client_firstname: MyString
+  client_lastname: MyString
   client_mobile: 
   price_service: 9.99
   service_name: MyString
   technician_name: MyString
-  promo_code: 9.99
-  cancellation: 
-  cancellation_reason: MyText
 
 two:
   date_created: 2021-04-19 17:00:57
-  client_name: MyString
+  client_firstname: MyString
+  client_lastname: MyString
   client_mobile: 
   price_service: 9.99
   service_name: MyString
   technician_name: MyString
-  promo_code: 9.99
-  cancellation: 
-  cancellation_reason: MyText
