--- a/test/fixtures/promotions.yml
+++ b/test/fixtures/promotions.yml
@@ -7,6 +7,7 @@
 #  discount_percent :decimal(, )
 #  promo_code       :string(8)
 #  service_type     :string
+#  title            :string
 #  created_at       :datetime         not null
 #  updated_at       :datetime         not null
 #  service_id       :bigint
